# quiver

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  clippy.toml  deny.toml  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: visual-recap.sh
.github/workflows/: build.yml  ci.yml  dast.yml  release.yml  security.yml  visual-recap.yml
.zap/: rules.tsv
apps/docs/: README.md  book.toml
bench/: README.md  pyproject.toml  run-gist-all7.sh
bench/quiver_bench/: __init__.py  comparison.py  contention_sweep.py  datasets.py  filter_sweep.py  manifest.py  metrics.py  quant_sweep.py  report.py  rss.py  run.py
bench/quiver_bench/competitors/: __init__.py  base.py  chroma_adapter.py  faiss_adapter.py  lancedb_adapter.py  milvus_lite_adapter.py  milvus_server_adapter.py  pgvector_adapter.py  qdrant_adapter.py  quiver_adapter.py  weaviate_adapter.py
bench/tests/: test_comparison.py  test_contention.py  test_metrics.py  test_sweeps.py
crates/quiver-cli/: Cargo.toml  build.rs
crates/quiver-cli/src/: admin.rs  demo.rs  main.rs  update.rs
crates/quiver-cluster/: Cargo.toml
crates/quiver-cluster/src/: lib.rs
crates/quiver-core/: Cargo.toml
crates/quiver-core/src/: blockfile.rs  descriptor.rs  error.rs  ids.rs  keyring.rs  lib.rs  manifest.rs  page.rs  paged.rs  sec.rs  segment.rs  store.rs  wal.rs
crates/quiver-core/tests/: crash_recovery.rs
crates/quiver-crypto/: Cargo.toml
crates/quiver-crypto/src/: codec.rs  dcpe.rs  envelope.rs  lib.rs  payload.rs  vector.rs
crates/quiver-crypto/tests/: at_rest.rs  envelope_shred.rs  kat.rs
crates/quiver-embed/: Cargo.toml
crates/quiver-embed/src/: envelope.rs  lib.rs  multivector.rs  mvcc.rs  snapshot.rs
crates/quiver-embed/tests/: concurrent_reads.rs  mvcc_measurement.rs  mvcc_reads.rs  off_lock_rebuild.rs  replication.rs  scale.rs
crates/quiver-import/: Cargo.toml
crates/quiver-import/src/: lib.rs  live.rs
crates/quiver-index/: Cargo.toml
crates/quiver-index/examples/: disk_recall.rs  sift_recall.rs
crates/quiver-index/src/: colbert.rs  disk.rs  fresh.rs  gpu.rs  hnsw.rs  ivf.rs  kmeans.rs  lib.rs  rng.rs  score.rs  vamana.rs
crates/quiver-index/src/quant/: binary.rs  kmeans.rs  mod.rs  product.rs  scalar.rs
crates/quiver-mcp/: Cargo.toml
crates/quiver-mcp/src/: lib.rs
crates/quiver-proto/: Cargo.toml  build.rs
crates/quiver-proto/proto/: quiver.proto
crates/quiver-proto/src/: lib.rs
crates/quiver-providers/: Cargo.toml
crates/quiver-providers/src/: lib.rs
crates/quiver-query/: Cargo.toml
crates/quiver-query/src/: lib.rs  sparse.rs  sparse_index.rs  tokenize.rs
crates/quiver-server/: Cargo.toml
crates/quiver-server/src/: audit.rs  auth.rs  cluster.rs  coordinator.rs  embed_provider.rs  error.rs  grpc.rs  lib.rs  metrics.rs  otlp.rs  raft.rs  rate_limit.rs  replication.rs  rest.rs
crates/quiver-server/src/raft/: durable_log.rs  grpc.rs  log_store.rs
crates/quiver-server/tests/: audit.rs  autoscale.rs  client_side_encryption.rs  client_side_vectors.rs  cluster.rs  cluster_coordinator.rs  cluster_coordinator_auth.rs  cluster_migration.rs  cluster_replicas.rs  cost_limits.rs  dcpe.rs  embedding.rs  error_paths.rs  hybrid.rs  metrics.rs  multivector.rs  mvcc.rs  openapi.rs  raft_cluster.rs  raft_gate.rs  raft_membership.rs  raft_router.rs  rate_limit.rs  rbac.rs  replication.rs  round_trip.rs  security_headers.rs  snapshot.rs  tls.rs  upsert_stream.rs
crates/quiver-simd/: Cargo.toml
crates/quiver-simd/benches/: distance.rs
crates/quiver-simd/src/: avx2.rs  lib.rs  scalar.rs
crates/quiver-tui/: Cargo.toml
crates/quiver-tui/src/: decor.rs  lib.rs  logo.rs  theme.rs
crates/quiver-tui/tests/: live.rs
docs/: diagrams.md  mcp.md  migration.md  quiver-explained.md  replication.md  repo-scaffold-plan.md  risk-register.md  roadmap.md
docs/adr/: 0001-language-and-workspace.md  0002-async-runtime.md  0003-serialization.md  0004-on-disk-format.md  0005-durability-and-recovery.md  0006-concurrency-model.md  0007-index-roadmap.md  0008-quantization.md  0009-simd-kernels.md  0010-crypto-envelope-aead.md  0011-authn-authz-tenancy.md  0012-client-side-encryption.md  0013-config-and-secure-defaults.md  0014-observability.md  0015-ci-policy.md  0016-license-agpl.md  0017-error-handling.md  0018-sdk-and-integration-strategy.md  0019-disk-index-format.md  0020-row-addressed-segment-storage.md  0021-tombstones-and-compaction.md  0022-secondary-indexes.md  0023-incremental-in-place-updates.md  0024-migration-importers.md  0025-durable-incremental-index.md  0026-hnsw-incremental-delete.md  0027-live-migration-connectors.md  0028-multi-vector-late-interaction.md  0029-live-chroma-postgres-connectors.md  0030-leader-follower-replication.md  0031-dcpe-vector-encryption.md  0032-client-side-vector-encryption.md  0033-graph-incremental-freshdiskann.md  0034-multivector-followups.md  0035-docs-site-and-dcpe-hardening.md  0036-retro-cockpit-design-system.md  0037-scientific-multi-db-benchmark-suite.md  0038-batch-wal-upsert.md  0039-one-command-install.md  0040-query-cost-limits.md  (+31 more)
docs/analysis/: state-of-quiver-v0.17.md
docs/api/: openapi.yaml  rest-grpc.md  (+1 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filter_json.rs  page_decode.rs  wal_decode.rs
kat/: client-ciphers.json
scripts/: acceptance.sh  acceptance_sdk.py  bench-disk-frugality.ps1  demo.sh  install.ps1  install.sh  record-cockpit-cast.sh  seed_demo.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/quiver/: __init__.py  async_client.py  client.py  dcpe.py  encryption.py  haystack.py  langchain.py  llamaindex.py  rerank.py  vector.py
sdks/python/tests/: test_async_client.py  test_client.py  test_dcpe.py  test_encryption.py  test_haystack.py  test_langchain.py  test_llamaindex.py  test_rerank.py  test_vector.py
tools/cockpit-shots/: Cargo.toml
tools/cockpit-shots/src/: main.rs
(+168 files in other folders)
