# Quiver — Cargo workspace.
# Crate responsibilities and the dependency DAG: docs/architecture/overview.md
# Scaffold rationale: docs/repo-scaffold-plan.md

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/achref-soua/quiver"
authors = ["Achref Soua <achref.soua@outlook.com>"]

# Shared lint policy applied by every crate via `[lints] workspace = true`.
# See ADR-0017 (error handling) and ADR-0009 (unsafe discipline).
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "warn"

# External dependencies are pinned once here and referenced from crates with
# `dep = { workspace = true }`. Added as features land.
[workspace.dependencies]
# Internal crates (path deps with a version so `cargo deny` sees no wildcard),
# referenced as `quiver-x = { workspace = true }`.
quiver-core = { path = "crates/quiver-core", version = "0.1" }
quiver-embed = { path = "crates/quiver-embed", version = "0.1" }
quiver-index = { path = "crates/quiver-index", version = "0.1" }
quiver-proto = { path = "crates/quiver-proto", version = "0.1" }
quiver-query = { path = "crates/quiver-query", version = "0.1" }
quiver-server = { path = "crates/quiver-server", version = "0.1" }
quiver-simd = { path = "crates/quiver-simd", version = "0.1" }

anyhow = "1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
prost = "0.14"
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Build-time codegen for the gRPC contract. protoc is vendored so a clean clone
# builds with no system protobuf compiler installed.
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

# Dev-only dependencies (tests, property tests, fixtures).
proptest = "1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
