# Quiver — Cargo workspace.
# Crate responsibilities and the dependency DAG: docs/architecture/overview.md
# Scaffold rationale: docs/repo-scaffold-plan.md

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
# MSRV: 1.88 — the minimum the dependency tree supports (ratatui 0.30's
# `ratatui-core`/`-widgets`/`-crossterm`). Bumped from 1.85 when updating ratatui
# to clear the transitive `lru` advisory (RUSTSEC-2026-0002).
rust-version = "1.88"
license = "AGPL-3.0-only"
repository = "https://github.com/achref-soua/quiver"
authors = ["Achref Soua <achref.soua@outlook.com>"]

# Shared lint policy applied by every crate via `[lints] workspace = true`.
# See ADR-0017 (error handling) and ADR-0009 (unsafe discipline).
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "warn"

# External dependencies are pinned once here and referenced from crates with
# `dep = { workspace = true }`. Added as features land.
[workspace.dependencies]
# Internal crates (path deps with a version so `cargo deny` sees no wildcard),
# referenced as `quiver-x = { workspace = true }`.
quiver-core = { path = "crates/quiver-core", version = "0.2" }
quiver-crypto = { path = "crates/quiver-crypto", version = "0.2" }
quiver-embed = { path = "crates/quiver-embed", version = "0.2" }
quiver-index = { path = "crates/quiver-index", version = "0.2" }
quiver-mcp = { path = "crates/quiver-mcp", version = "0.2" }
quiver-proto = { path = "crates/quiver-proto", version = "0.2" }
quiver-query = { path = "crates/quiver-query", version = "0.2" }
quiver-server = { path = "crates/quiver-server", version = "0.2" }
quiver-simd = { path = "crates/quiver-simd", version = "0.2" }
quiver-tui = { path = "crates/quiver-tui", version = "0.2" }

anyhow = "1"
axum = "0.8"
# TLS-in-transit (ADR-0010): rustls with the audited `ring` provider — no
# OpenSSL, and no `aws-lc-rs` (which needs a C toolchain unavailable on minimal
# builders). `ring` backs the rustls AEAD/handshake; the at-rest codec below
# uses RustCrypto. `axum-server` terminates TLS for REST; tonic's `tls-ring`
# feature does so for gRPC.
axum-server = { version = "0.8", default-features = false, features = [
    "tls-rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
# Maintained PEM parsing (the `PemObject` trait), replacing the now-unmaintained
# `rustls-pemfile`. Already in the tree via rustls.
rustls-pki-types = { version = "1", features = ["std"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
    "tls12",
    "logging",
] }
# Audited cryptography (RustCrypto) for encryption-at-rest: XChaCha20-Poly1305
# AEAD, HKDF-SHA256 per-page subkeys, and zeroized key material. See ADR-0010
# and docs/security/crypto.md.
chacha20poly1305 = { version = "0.10", features = ["getrandom"] }
# Compact, dependency-free encoding for the client-side payload envelope
# (ADR-0012): nonce and ciphertext are base64 strings so the JSON envelope is
# identical across the Rust reference implementation and the language SDKs.
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
crc32c = "0.6"
hkdf = "0.12"
# Memory-mapped reads for the disk-resident index (ADR-0019): only the touched
# (ciphertext) pages stay resident; the OS pages them in and out.
memmap2 = "0.9"
sha2 = "0.10"
zeroize = "1"
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
] }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
prost = "0.14"
roaring = "0.10"
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Retro terminal cockpit (quiver-tui): ratatui renders; crossterm drives input
# (its version is pinned to the one ratatui re-exports so they share a single
# backend). The `event-stream` feature gives an async input stream. ratatui 0.30
# pulls a patched `lru` (>= 0.16.3), resolving RUSTSEC-2026-0002; default
# features are off so only the crossterm backend is pulled (no termwiz/wezterm).
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }

# Build-time codegen for the gRPC contract. protoc is vendored so a clean clone
# builds with no system protobuf compiler installed.
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

# Dev-only dependencies (tests, property tests, fixtures).
proptest = "1"
# Self-signed certificate generation for TLS tests, ring-backed (no aws-lc-rs).
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
