[package]
name = "quiver-cli"
description = "Quiver command-line interface and single-binary entrypoint."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "quiver"
path = "src/main.rs"

[dependencies]
quiver-server = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
