[package]
name = "quiver-cli"
description = "Quiver command-line interface and single-binary entrypoint."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "quiver"
path = "src/main.rs"

[dependencies]
quiver-crypto = { workspace = true }
quiver-embed = { workspace = true }
quiver-import = { workspace = true }
quiver-mcp = { workspace = true }
quiver-server = { workspace = true }
quiver-tui = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
ico = { workspace = true }
winresource = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
