[package]
name = "quiverdb-cluster"
description = "Opt-in cluster-mode primitives for Quiver (ADR-0065): static shard map, rendezvous (HRW) id hashing, and the scatter-gather merge. The router composes these; each shard is an ordinary single-writer Quiver engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_cluster"
