[package]
name = "quiver-core"
description = "Quiver's storage engine: pages, WAL, manifest, segments, and recovery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
crc32c = { workspace = true }
memmap2 = { workspace = true }
postcard = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
