[package]
name = "quiverdb-crypto"
description = "Audited-cryptography wrappers for Quiver (no custom primitives)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quiver-core = { workspace = true }

base64 = { workspace = true }
chacha20 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
quiver-embed = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_crypto"
