[package]
name = "quiverdb-embed"
description = "The embeddable, in-process Quiver database handle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quiver-core = { workspace = true }
quiver-index = { workspace = true }
quiver-query = { workspace = true }
arc-swap = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_embed"
