[package]
name = "quiver-import"
description = "Migration importers: load Qdrant / Chroma / pgvector exports into Quiver."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quiver-embed = { workspace = true }

serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }

# Live Postgres / pgvector connector (ADR-0029). `rustls` + `webpki-roots` build
# the ring-backed TLS the `postgres` driver uses; see the workspace manifest.
postgres = { workspace = true }
rustls = { workspace = true }
tokio-postgres-rustls = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
