[package]
name = "quiver-index"
description = "Vector indexes for Quiver: HNSW now; DiskANN/Vamana and IVF later."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
quiver-simd = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
