[package]
name = "quiverdb-index"
description = "Vector indexes for Quiver: HNSW now; DiskANN/Vamana and IVF later."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quiver-core = { workspace = true }
quiver-simd = { workspace = true, features = ["serde"] }
memmap2 = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_index"
