[package]
name = "quiverdb-index"
description = "Vector indexes for Quiver: HNSW now; DiskANN/Vamana and IVF later."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quiver-core = { workspace = true }
quiver-simd = { workspace = true, features = ["serde"] }
memmap2 = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# Optional GPU acceleration (ADR-0052), gated behind the off-by-default `cuda`
# feature. cudarc dynamically loads the CUDA driver at runtime and compiles the
# distance kernel with NVRTC, so a default build links nothing and the feature even
# *builds* without a CUDA toolchain present (only *running* needs a GPU). The CPU
# SIMD kernel stays the default and the fallback.
cudarc = { version = "0.12", features = [
    "cuda-12010",
    "nvrtc",
    "driver",
], optional = true }

[features]
# GPU-accelerated batch distance (ADR-0052). Off by default.
cuda = ["dep:cudarc"]

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_index"
