[package]
name = "quiverdb-mcp"
description = "An MCP server exposing Quiver's capabilities as agent tools."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quiver-crypto = { workspace = true }
quiver-embed = { workspace = true }
quiver-providers = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_mcp"
