[package]
name = "quiver-query"
description = "Quiver's query planner and hybrid filtered search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rust-stemmers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
