[package]
name = "quiver-server"
description = "The Quiver daemon: gRPC + REST with auth, RBAC, audit, and metrics."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
quiver-core = { workspace = true }
quiver-crypto = { workspace = true }
quiver-embed = { workspace = true }
quiver-proto = { workspace = true }
quiver-query = { workspace = true }

axum = { workspace = true }
axum-server = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-rustls = { workspace = true }

[lints]
workspace = true
