[package]
name = "quiverdb-server"
description = "The Quiver daemon: gRPC + REST with auth, RBAC, audit, and metrics."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quiver-core = { workspace = true }
quiver-crypto = { workspace = true }
quiver-embed = { workspace = true }
quiver-cluster = { workspace = true }
arc-swap = { workspace = true }
reqwest = { workspace = true }
quiver-proto = { workspace = true }
quiver-providers = { workspace = true }
quiver-query = { workspace = true }

axum = { workspace = true }
axum-server = { workspace = true }
figment = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OTLP traces export (ADR-0059) — optional, enabled by the `otlp` feature.
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
# Compile the OpenTelemetry traces exporter. Off by default; even when compiled
# in, the exporter only activates when an OTLP endpoint is configured at runtime
# (QUIVER_OTLP_ENDPOINT). See ADR-0059 and docs/observability.
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
rcgen = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_server"
