[package]
name = "quiver-simd"
description = "SIMD distance kernels for Quiver."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "distance"
harness = false

[lints]
workspace = true
