[package]
name = "quiverdb-simd"
description = "SIMD distance kernels for Quiver."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Optional: derive serde on `Metric` so trained quantizers (which carry their
# metric) can be persisted as encrypted index artifacts. Off by default to keep
# this pure-compute leaf crate dependency-free.
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "distance"
harness = false

[lints]
workspace = true

[lib]
name = "quiver_simd"
